# blacket-tui-native-rs

./: .gitignore  Cargo.toml  README.md  config.example.toml
src/: main.rs  tui-theme.toml
src/api/: mod.rs
src/api/socket/: mod.rs
src/api/types/: mod.rs
src/api/types/objects/: data.rs  mod.rs  user.rs
src/api/types/requests/: mod.rs
src/api/types/responses/: mod.rs
src/api/user/: mod.rs
src/config/: mod.rs
src/consts/: api.rs
src/providers/: mod.rs
src/providers/pack_opener/: mod.rs
src/utils/: cookie.rs
